--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     <h1>Welcome to pat's salmon</h1>
-    <a href="sales.html"></a>
+    <a href="sales.html">sales</a>
 </body>
 </html>
