table is done but ugly

--- a/sales.html
+++ b/sales.html
@@ -3,11 +3,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  
+  <style>
+      table,td ,th {
+          border: 1px solid black;
+          border-collapse: collapse;
+          text-align: center;
+          word-spacing: 7px;
+      }
+      
+  </style>
 </head>
 <body>
     
  <div id="sales"></div>
  <script src="js/app.js"></script>
+
 </body>
 </html>
