--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to pat's salmon</h1>
     <a href="sales.html">sales</a>
+    <img src="images/salmon.png" alt="salmon'pat logo" srcset="">
 </body>
 </html>
