working and dry

--- a/sales.html
+++ b/sales.html
@@ -17,6 +17,22 @@
 </head>
 <body>
 <img src="images/salmon.png" alt="salmon'pat logo" srcset="">
+
+<div >
+<form id="new-stand" action="submit">
+<fieldset>
+    <label for="s">stand location</label>
+    <input type="text"  id="s" placeholder="New stand location"><br>
+    <label for="mincust">Minimum amount of customer/Hour expected</label>
+    <input type="text"  id="mincust" placeholder="Enter minimum amount of customer/Hour expected"><br>
+    <label for="">Maximum amount of customer/Hour expected</label>
+    <input type="text"  id="maxcust" placeholder="Enter maximum amount of customer/Hour expected"><br>
+    <label for="avarageSold">Avarage cookies sold/Customer</label>
+    <input type="text"  id="avarageSold" placeholder="Enter avarage cookies sold/Customer"><br>
+    <input type="submit" value="Submit application"><br>
+</fieldset>
+</form>
+</div>
     
  <div id="sales"></div>
  <script src="js/app.js"></script>
