--- a/sales.html
+++ b/sales.html
@@ -22,13 +22,13 @@
 <form id="new-stand" action="submit">
 <fieldset>
     <label for="s">stand location</label>
-    <input type="text"  id="s" placeholder="New stand location"><br>
+    <input type="text"  id="s" placeholder="New stand location" required><br>
     <label for="mincust">Minimum amount of customer/Hour expected</label>
-    <input type="text"  id="mincust" placeholder="Enter minimum amount of customer/Hour expected"><br>
+    <input type="text"  id="mincust" placeholder="Enter minimum amount of customer/Hour expected" required><br>
     <label for="">Maximum amount of customer/Hour expected</label>
-    <input type="text"  id="maxcust" placeholder="Enter maximum amount of customer/Hour expected"><br>
+    <input type="text"  id="maxcust" placeholder="Enter maximum amount of customer/Hour expected" required><br>
     <label for="avarageSold">Avarage cookies sold/Customer</label>
-    <input type="text"  id="avarageSold" placeholder="Enter avarage cookies sold/Customer"><br>
+    <input type="text"  id="avarageSold" placeholder="Enter avarage cookies sold/Customer" required><br>
     <input type="submit" value="Submit application"><br>
 </fieldset>
 </form>
