--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/style-main.css">
     <link rel="stylesheet" href="style/reset.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
+        </style> 
 
 </head>
 
@@ -49,11 +52,13 @@
         </div>
         <div class="info">
             <p id="branches">
+                <p class="location">Our Branches across the world</p>
             <p class="location"> Seattle : 305 Harrison St</p>
             <p class="location"> Tokyo : 360 drift St</p>
             <p class="location"> Dubai : 420 snoop St</p>
             <p class="location"> Paris : 37 c'est la vie st</p>
             <p class="location"> lima : 13th wrong way st</p>
+            <hr>
 
 
 
