--- a/sales.html
+++ b/sales.html
@@ -14,9 +14,11 @@
           background-color: salmon;
       }
   </style>
+  <link rel="stylesheet" href="style/reset.css">
+  <link rel="stylesheet" href="style/sales.css">
 </head>
 <body>
-<img src="images/salmon.png" alt="salmon'pat logo" srcset="">
+<img class="uglyfish" src="images/salmon.png" alt="salmon'pat logo" srcset="">
 
 <div >
 <form id="new-stand" action="submit">
